<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jobPort.fragments.SystemAnalystFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_apply"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/iv_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_system_analyst" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_round"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/save"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px"
                android:elevation="8dp"
                card_view:cardElevation="10dp"
                card_view:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/remote"
                            android:textColor="@color/DarkGray"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/remote"
                            android:textColor="@color/DarkGray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/remote"
                            android:textColor="@color/DarkGray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/remote"
                            android:textColor="@color/DarkGray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tv_paid"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/remote"
                            android:textColor="@color/DarkGray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_experience"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/remote"
                            android:textColor="@color/DarkGray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla rhoncus tristique odio, sed tempus mi dignissim et. Vivamus id tortor at risus laoreet ultrices. Cras blandit magna eget ipsum porta facilisis. Donec urna diam, sodales a mauris in, sollicitudin varius diam. Integer aliquet non dui eget sagittis. Nam et justo enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed consequat augue purus. Praesent fringilla eleifend metus id congue. Ut pretium pharetra lectus, ac semper nibh dictum semper. Mauris a euismod ligula, sit amet tincidunt mi. Morbi ac ultrices est, eget luctus tellus. Nulla facilisi. In ac lacus non mauris accumsan sodales."
                    android:textColor="@color/DarkGray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/requirements"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_requirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla rhoncus tristique odio, sed tempus mi dignissim et. Vivamus id tortor at risus laoreet ultrices. Cras blandit magna eget ipsum porta facilisis. Donec urna diam, sodales a mauris in, sollicitudin varius diam. Integer aliquet non dui eget sagittis. Nam et justo enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed consequat augue purus. Praesent fringilla eleifend metus id congue. Ut pretium pharetra lectus, ac semper nibh dictum semper. Mauris a euismod ligula, sit amet tincidunt mi. Morbi ac ultrices est, eget luctus tellus. Nulla facilisi. In ac lacus non mauris accumsan sodales."
                    android:textColor="@color/DarkGray"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="@color/buttonColor"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/clickNapply"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress_bar_white" />
</RelativeLayout>